	Type, WBS
Updated to extract the following fields from resource data in an MPP8 file which were previously not imported:
	Code, Cost1-Cost10, Date1-Date10, Duration1-Duration10, EmailAddress, Finish1-Finish10,
	Number1-Number20, Start1-Start10, Text1-Text30
Added support for task and resource note fields in MPP8 files.

Version 0.0.13
Implemented support for the Microsoft Project 98 file format.
Fixed a bug that prevented task and resource note text from being read.
Updated to remove a Java 1.4 dependency introduced in 0.0.12. Will now work with Java 1.3.
Updated to correct handling of carriage returns embedded in note fields.

Version 0.0.12
Fixed incorrect handling of timezones and daylight saving time.
Fixed incorrect task structure generated from outline levels.
Updated to extract the notes fields from tasks and resources read from an MPP file.
Added the option to remove or preserve the RTF formatting from the note fields from an MPP file.
Updated to extract the following fields from task data in an MPP file which were previously not imported:
	Text11-Text30, Number6-Number20, Duration4-Duration10, Date1-Date10, 
	Cost4-Cost10, Start6-Start10, Finish6-Finish10
Updated to extract the following fields from resource data in an MPP file which were previously not imported:
	Text6-Text30, Start1-Start10, Finish1-Finish10, Number1-Number20, 
	Duration1-Duration10, Date1-Date10, Cost1-Cost10

Version 0.0.11
Fixed error in format string used in one of the example files.
Fixed error where double byte characters were being read incorrectly.
Fixed error where deleted constraints were being resurrected when read from an MPP file.
Updated to extract the following fields from task data in an MPP file which were previously not imported:
	Flag11-Flag20, Rollup, HideBar, EffortDriven

Version 0.0.10
Corrected Actual Start and Actual End fields from MPP file.
Fixed bug where time values were being broken by daylight saving time in the user's default locale.